--- a/Assets/_User/Aguro/User.Aguro.asmdef
+++ b/Assets/_User/Aguro/User.Aguro.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "User.Aguro",
     "rootNamespace": "User.Aguro",
-    "references": [],
+    "references": [
+        "GUID:1305d98d08a75c844877f3520d28e1a6"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
