test: IntExp のテストコードを追加

--- a/Assets/_Main/Scripts/Tests/Editor/Game.Editor.Tests.asmdef
+++ b/Assets/_Main/Scripts/Tests/Editor/Game.Editor.Tests.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "Game.Editor.Tests",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "Game.Runtime",
+        "Game.Editor"
     ],
     "includePlatforms": [
         "Editor"
